--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.19",
     "pocketbase": "^0.15.2",
     "pretier": "^0.0.1",
     "react": "^18.2.0",
